UX: Fix highlight dark mode colors

--- a/assets/stylesheets/instant-search.scss
+++ b/assets/stylesheets/instant-search.scss
@@ -464,7 +464,8 @@
   }
 
   mark {
-    background: var(--highlight-bg);
+    background: var(--highlight-low-or-medium);
+    color: var(--primary);
   }
 }
 
